Review Request 9868 see PLS-3990, PLS-4044 - initial login page changes as pixel pushed with Neslon - clever fix for tooltip z-indexing issue

--- a/le-ui/projects/common/assets/sass/_login.scss
+++ b/le-ui/projects/common/assets/sass/_login.scss
@@ -11,6 +11,9 @@
 		vertical-align: baseline;
 		margin-left: 0.6em;
 	}
+	.company-regmark {
+		margin-left: 5px;
+	}
 }
 .update-password-body {
 	@include media(">medium") {
