--- a/le-ui/projects/common/components/datacloud/analysistabs/analysistabs.component.scss
+++ b/le-ui/projects/common/components/datacloud/analysistabs/analysistabs.component.scss
@@ -1,7 +1,33 @@
+// @media (max-width: 1573px) {
+//     #AnalysisTabsView {
+//         & > ul {
+//             & > li {
+//                 &.active .tab-container:first-child,
+//                 & > .tab-container:first-child,
+//                 {
+//                 }
+//                 &:first-child {
+//                     z-index: 5;
+//                     .more-info .tooltip_:after, 
+//                     .more-info .tooltip_:before {
+//                         left: 20px;
+//                     }
+//                     .more-info .tooltip_ {
+//                         transform: none;
+//                         left: -23px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 #AnalysisTabsView {
     @include flex-container;
     position: relative;
-    z-index: 5;
+    z-index: 3;
+    &:hover {
+        z-index: 6;
+    }
     border-top: 1px solid #d0d1d0;
     border-bottom: 1px solid #d0d1d0;
     background: #efefef;
@@ -147,7 +173,7 @@
                 text-align: center;
                 width: 12px;
                 height: 12px;
-                position: realtive;
+                position: relative;
                 top: -1px;
                 .tooltip_ {
                     text-align: left;
