--- a/le-ui/projects/login/app/login/login.component.scss
+++ b/le-ui/projects/login/app/login/login.component.scss
@@ -2,6 +2,16 @@
     position: relative;
 }
 
+.form-signin {
+    h1 {
+        font-size: 36px;
+        margin-bottom: 10px;
+    }
+    .secondary-actions_ {
+        margin-top: 20px;
+    }
+}
+
 .user-info {
     position: absolute;
     text-align: right;
